@@ -422,6 +422,9 @@ key must be at the top level in the JSON object and the value associated with
 the key must be a string, otherwise no filtering or multiline aggregation will
 occur.
 
+*`ignore_decoding_error`*:: An optional configuration setting that specifies if JSON decoding errors should be
+logged or not. If set to true, errors will not be logged. The default is false.
+
 [float]
 ==== `multiline`
 
