@@ -316,6 +316,72 @@ class Test(BaseTest):
         # We drop null values during the generic event conversion.
         assert "res" not in o
 
+    def test_json_decoding_error_true(self):
+        """
+        Test if json_decoding_error is set to true, that no errors are logged.
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            json=dict(
+                message_key="message",
+                ignore_decoding_error=True
+            ),
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        testfile1 = self.working_dir + "/log/test.log"
+
+        message = "invalidjson"
+        with open(testfile1, 'a') as f:
+            f.write(message + "\n")
+
+        proc = self.start_beat()
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+        proc.check_kill_and_wait()
+
+        output = self.read_output(
+            required_fields=["@timestamp"],
+        )
+        assert len(output) == 1
+        assert output[0]["message"] == message
+        assert False == self.log_contains_count("Error decoding JSON")
+
+    def test_json_decoding_error_false(self):
+        """
+        Test if json_decoding_error is set to false, that an errors is logged.
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+            json=dict(
+                message_key="message",
+                ignore_decoding_error=False
+            ),
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+
+        testfile1 = self.working_dir + "/log/test.log"
+
+        message = "invalidjson"
+        with open(testfile1, 'a') as f:
+            f.write(message + "\n")
+
+        proc = self.start_beat()
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=10)
+        proc.check_kill_and_wait()
+
+        output = self.read_output(
+            required_fields=["@timestamp"],
+        )
+        assert len(output) == 1
+        assert output[0]["message"] == message
+        assert True == self.log_contains_count("Error decoding JSON")
+
     def test_with_generic_filtering_remove_headers(self):
         """
         It should work fine to combine JSON decoding with
